--- a/presentations/index.html
+++ b/presentations/index.html
@@ -104,9 +104,64 @@
   <p><strong><em>2024:</em></strong></p>
 
 <p class="message" style="font-size: 16px;">
-06/03/2024  Dept of Psychology, Sun Yat-sen Univeristy
+08/09/2024  Cognitive Computationla Neuroscience (CCN) 2024
 <br />
-[Invited Talk] 	Bridging the Gap between Neuroscience and AI in Visual Perception
+[Poster]    ReAlnet: Achieving More Human Brain-Like Vision via Human Neural Representational Alignment
+<br />
+<br />
+08/07/2024  The Kanwisher Lab, MIT
+<br />
+[Invited Talk]  Cognitive Computational Neuroscience in Visual Perception from Experiments and Computations
+<br />
+<br />
+08/06/2024  Cognitive Computationla Neuroscience (CCN) 2024
+<br />
+[Poster]    Probing Human Vision via an Image-to-EEG Encoding Model
+<br />
+<br />
+07/29/2024  ZJU Cognition &amp; AI Summer School 2024
+<br />
+[Invited Talk (Virtually)]  Exploring Human Visual Mechanisms: Integrating Human EEG and Artificial Neural Networks
+<br />
+<br />
+06/30/2024  SJTU Brain Facts Summer School 2024
+<br />
+[Invited Talk (Virtually)]  Bridging the gap between Neuroscience and AI in visual perception
+<br />
+<br />
+06/16/2024  School of Psychology and Cognitive Science, East China Normal University
+<br />
+[Invited Talk]  Bridging the gap between Neuroscience and AI in visual perception
+<br />
+<br />
+06/15/2024  TCCI-NeuroChat神聊 2024
+<br />
+[Talk]  Exploring human vision through Img2EEG: An encoding framework generating high-resolution temporal EEG signals from visual inputs
+<br />
+<br />
+06/14/2024  School of Science, Zhejiang Sci-Tech University
+<br />
+[Invited Talk]  Exploring Human Visual Mechanisms: Integrating Human EEG and Artificial Neural Networks
+<br />
+<br />
+06/13/2024  School of Psychology, Nanjing Normal University
+<br />
+[Invited Talk]  Bridging the gap between Neuroscience and AI in visual perception
+<br />
+<br />
+06/05/2024  School of Psychology, South China Normal University
+<br />
+[Invited Talk]  Bridging the gap between Neuroscience and AI in visual perception
+<br />
+<br />
+06/04/2024  Faculty of Arts and Sciences, Beijing Normal University (Zhuhai)
+<br />
+[Invited Talk]  Spatiotopic and retinotopic object-location binding across saccades in a more dynamic context
+<br />
+<br />
+06/03/2024  Memory and Emotion Lab, Sun Yat-sen Univeristy
+<br />
+[Invited Talk] 	Spatiotopic and retinotopic object-location binding across saccades in a more dynamic context
 <br />
 <br />
 05/20/2024  Dept of Psychology, Shenzhen University
