--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 <p>I am Zitong Lu (路子童 in Chinese), a fourth-year PhD candidate in cognitive neuroscience working with Dr. <a href="https://psychology.osu.edu/people/golomb.9">Julie Golomb</a> in <a href="https://u.osu.edu/golomblab/">Vision and Cognitive Neuroscience Lab</a> at The Ohio State University. Also, I am the OSU EEGlab manager！</p>
 
-<p>I will join Dr. <a href="https://mcgovern.mit.edu/profile/nancy-kanwisher/">Nancy Kanwisher</a>’s <a href="https://web.mit.edu/bcs/nklab/index.shtml">lab</a> at Massachusetts Institute of Technology at a post-doc researcher next summer.</p>
+<p>I will join Dr. <a href="https://mcgovern.mit.edu/profile/nancy-kanwisher/">Nancy Kanwisher</a>’s <a href="https://web.mit.edu/bcs/nklab/index.shtml">lab</a> at Massachusetts Institute of Technology as a post-doc researcher next summer.</p>
 
 <p>Before that, I received B.Eng. in software engineering from Northeastern University in China in 2018 and M.S. in cognitive neuroscience from East China Normal University in 2021. I worked with <a href="https://sysumelab.com/about-dr-yixuan-ku">Dr. Yixuan Ku</a> in <a href="https://sysumelab.com/">Memory and Emotion Lab</a> and did some studies about visual working memory and face perception.</p>
 
